--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
